# ProgFund1_Final

./: .gitignore  BusinessLogic.cpp  BusinessLogic.h  CMakeLists.txt  CMakeSettings.json  Project.cpp  Project.cpp.bak2  Project.h  Project.rc  Project.sln  Project.vcxproj  Resource.h  invitee.h  mingw.cmake  stdafx.cpp  stdafx.h  targetver.h
